syntax = "proto3";

package pb;

service ShoppingCart {
    rpc AddCart (AddCartRequest) returns (AddCartResponse) {}
    rpc GetCart (GetCartRequest) returns (GetCartResponse) {}
    rpc ListCarts (ListCartsRequest) returns (ListCartsResponse) {}
    
    rpc AddItem (AddItemRequest) returns (AddItemResponse) {}
    rpc GetItem (GetItemRequest) returns (GetItemResponse) {}
    rpc ListItems (ListItemsRequest) returns (ListItemsResponse) {}
}

message Cart {
    int64 id = 1;
}

message AddCartRequest {
    int64 id = 1;
}

message AddCartResponse {
    int64 id = 1;
    string err = 2;
}

message GetCartRequest {
    int64 id = 1;
}

message GetCartResponse {
    Cart cart = 1;
    string err = 2;
}

message ListCartsRequest {
}

message ListCartsResponse {
    repeated Cart carts = 1;
    string err = 2;
}

message Item {
    int64 id = 1;
    string detail = 2;
    double price = 3;
}

message AddItemRequest {
    int64 id = 1;
    string detail = 2;
    float price = 3;
}

message AddItemResponse {
    int64 id = 1;
    string err = 2;
}

message GetItemRequest {
    int64 id = 1;
}

message GetItemResponse {
    Item item = 1;
    string err = 2;
}

message ListItemsRequest {
}

message ListItemsResponse {
    repeated Item items = 1;
    string err = 2;
}